# octagon

./: .env.example  .gitattributes  .gitignore  CASE_STUDY.md  HARDENING.md  LICENSE  README.md  alpha_ledger.py  cli.py  client.py  conftest.py  demo.py  forge.py  harvest.py  octagon.py  pyproject.toml  requirements.txt  scout.py
.claude/skills/octagon/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
adapters/: __init__.py  example_gate.py  reslice.py  store.py
docs/superpowers/plans/: 2026-07-18-github-ux-pass.md
docs/superpowers/specs/: 2026-07-18-github-ux-pass-design.md
personas/: __init__.py  base.py  ml_experts.py  personas.py
tests/: test_adapters.py  test_alpha_ledger.py  test_cli.py  test_client_hardening.py  test_demo_wiring.py  test_forge.py  test_harvest_scout.py  test_octagon.py  test_personas.py
